--- a/input.config
+++ b/input.config
@@ -1,7 +1,7 @@
 F:
 cd AutomatedTrading
 python main.py
-stream add VDE TQQQ SPXL UCO MARA SOXL FNGU UVXY LABU GUSH JNUG ARKK BA ETSY AMD AAPL FAS TNA NAIL
+stream add AAPL AMD ARKK BA ETSY FAS FNGU GUSH JNUG LABU MARA NAIL SOXL SPXL TNA TQQQ UCO UVXY VDE
 add TQQQ 20 renko_sa 4
 add SOXL 5 renko_tsfh 35        
 add FNGU 15 renko_smi 3 5
