pulled changes, updated queries and auth

--- a/Backtesting/config/optionsToTest.config
+++ b/Backtesting/config/optionsToTest.config
@@ -2,6 +2,11 @@ None
 stopAtPercentLoss 1
 stopAtPercentLoss 1.5
 stopAtPercentLoss 2
+delayAtPercentLoss 0.2 60
+delayAtPercentLoss 0.5 60
+delayAtPercentLoss 0.2 120
+delayAtPercentLoss 0.5 120
+delayAtPercentLoss 1.0 120
 TSFH 10
 TSFH 15
 TSFH 20
@@ -38,6 +43,51 @@ TSFH 35; stopAtPercentLoss 2
 TSFH 40; stopAtPercentLoss 2
 TSFH 45; stopAtPercentLoss 2
 TSFH 50; stopAtPercentLoss 2
+TSFH 10; delayAtPercentLoss 0.2 60
+TSFH 15; delayAtPercentLoss 0.2 60
+TSFH 20; delayAtPercentLoss 0.2 60
+TSFH 25; delayAtPercentLoss 0.2 60
+TSFH 30; delayAtPercentLoss 0.2 60
+TSFH 35; delayAtPercentLoss 0.2 60
+TSFH 40; delayAtPercentLoss 0.2 60
+TSFH 45; delayAtPercentLoss 0.2 60
+TSFH 50; delayAtPercentLoss 0.2 60
+TSFH 10; delayAtPercentLoss 0.5 60
+TSFH 15; delayAtPercentLoss 0.5 60
+TSFH 20; delayAtPercentLoss 0.5 60
+TSFH 25; delayAtPercentLoss 0.5 60
+TSFH 30; delayAtPercentLoss 0.5 60
+TSFH 35; delayAtPercentLoss 0.5 60
+TSFH 40; delayAtPercentLoss 0.5 60
+TSFH 45; delayAtPercentLoss 0.5 60
+TSFH 50; delayAtPercentLoss 0.5 60
+TSFH 10; delayAtPercentLoss 0.2 120
+TSFH 15; delayAtPercentLoss 0.2 120
+TSFH 20; delayAtPercentLoss 0.2 120
+TSFH 25; delayAtPercentLoss 0.2 120
+TSFH 30; delayAtPercentLoss 0.2 120
+TSFH 35; delayAtPercentLoss 0.2 120
+TSFH 40; delayAtPercentLoss 0.2 120
+TSFH 45; delayAtPercentLoss 0.2 120
+TSFH 50; delayAtPercentLoss 0.2 120
+TSFH 10; delayAtPercentLoss 0.5 120
+TSFH 15; delayAtPercentLoss 0.5 120
+TSFH 20; delayAtPercentLoss 0.5 120
+TSFH 25; delayAtPercentLoss 0.5 120
+TSFH 30; delayAtPercentLoss 0.5 120
+TSFH 35; delayAtPercentLoss 0.5 120
+TSFH 40; delayAtPercentLoss 0.5 120
+TSFH 45; delayAtPercentLoss 0.5 120
+TSFH 50; delayAtPercentLoss 0.5 120
+TSFH 10; delayAtPercentLoss 1.0 120
+TSFH 15; delayAtPercentLoss 1.0 120
+TSFH 20; delayAtPercentLoss 1.0 120
+TSFH 25; delayAtPercentLoss 1.0 120
+TSFH 30; delayAtPercentLoss 1.0 120
+TSFH 35; delayAtPercentLoss 1.0 120
+TSFH 40; delayAtPercentLoss 1.0 120
+TSFH 45; delayAtPercentLoss 1.0 120
+TSFH 50; delayAtPercentLoss 1.0 120
 TSFHP 0.10
 TSFHP 0.20
 TSFHP 0.30
@@ -74,6 +124,51 @@ TSFHP 0.60; stopAtPercentLoss 2
 TSFHP 0.75; stopAtPercentLoss 2
 TSFHP 0.90; stopAtPercentLoss 2
 TSFHP 1.00; stopAtPercentLoss 2
+TSFHP 0.10; delayAtPercentLoss 0.2 60
+TSFHP 0.20; delayAtPercentLoss 0.2 60
+TSFHP 0.30; delayAtPercentLoss 0.2 60
+TSFHP 0.40; delayAtPercentLoss 0.2 60
+TSFHP 0.50; delayAtPercentLoss 0.2 60
+TSFHP 0.60; delayAtPercentLoss 0.2 60
+TSFHP 0.75; delayAtPercentLoss 0.2 60
+TSFHP 0.90; delayAtPercentLoss 0.2 60
+TSFHP 1.00; delayAtPercentLoss 0.2 60
+TSFHP 0.10; delayAtPercentLoss 0.5 60
+TSFHP 0.20; delayAtPercentLoss 0.5 60
+TSFHP 0.30; delayAtPercentLoss 0.5 60
+TSFHP 0.40; delayAtPercentLoss 0.5 60
+TSFHP 0.50; delayAtPercentLoss 0.5 60
+TSFHP 0.60; delayAtPercentLoss 0.5 60
+TSFHP 0.75; delayAtPercentLoss 0.5 60
+TSFHP 0.90; delayAtPercentLoss 0.5 60
+TSFHP 1.00; delayAtPercentLoss 0.5 60
+TSFHP 0.10; delayAtPercentLoss 0.2 120
+TSFHP 0.20; delayAtPercentLoss 0.2 120
+TSFHP 0.30; delayAtPercentLoss 0.2 120
+TSFHP 0.40; delayAtPercentLoss 0.2 120
+TSFHP 0.50; delayAtPercentLoss 0.2 120
+TSFHP 0.60; delayAtPercentLoss 0.2 120
+TSFHP 0.75; delayAtPercentLoss 0.2 120
+TSFHP 0.90; delayAtPercentLoss 0.2 120
+TSFHP 1.00; delayAtPercentLoss 0.2 120
+TSFHP 0.10; delayAtPercentLoss 0.5 120
+TSFHP 0.20; delayAtPercentLoss 0.5 120
+TSFHP 0.30; delayAtPercentLoss 0.5 120
+TSFHP 0.40; delayAtPercentLoss 0.5 120
+TSFHP 0.50; delayAtPercentLoss 0.5 120
+TSFHP 0.60; delayAtPercentLoss 0.5 120
+TSFHP 0.75; delayAtPercentLoss 0.5 120
+TSFHP 0.90; delayAtPercentLoss 0.5 120
+TSFHP 1.00; delayAtPercentLoss 0.5 120
+TSFHP 0.10; delayAtPercentLoss 1.0 120
+TSFHP 0.20; delayAtPercentLoss 1.0 120
+TSFHP 0.30; delayAtPercentLoss 1.0 120
+TSFHP 0.40; delayAtPercentLoss 1.0 120
+TSFHP 0.50; delayAtPercentLoss 1.0 120
+TSFHP 0.60; delayAtPercentLoss 1.0 120
+TSFHP 0.75; delayAtPercentLoss 1.0 120
+TSFHP 0.90; delayAtPercentLoss 1.0 120
+TSFHP 1.00; delayAtPercentLoss 1.0 120
 OCO 50 100
 OCO 30 90
 OCO 30 60
@@ -118,3 +213,58 @@ OCO 15 45; stopAtPercentLoss 2
 OCO 15 30; stopAtPercentLoss 2
 OCO 10 30; stopAtPercentLoss 2
 OCO 10 20; stopAtPercentLoss 2
+OCO 50 100; delayAtPercentLoss 0.2 60
+OCO 30 90; delayAtPercentLoss 0.2 60
+OCO 30 60; delayAtPercentLoss 0.2 60
+OCO 25 75; delayAtPercentLoss 0.2 60
+OCO 25 50; delayAtPercentLoss 0.2 60
+OCO 20 60; delayAtPercentLoss 0.2 60
+OCO 20 40; delayAtPercentLoss 0.2 60
+OCO 15 45; delayAtPercentLoss 0.2 60
+OCO 15 30; delayAtPercentLoss 0.2 60
+OCO 10 30; delayAtPercentLoss 0.2 60
+OCO 10 20; delayAtPercentLoss 0.2 60
+OCO 50 100; delayAtPercentLoss 0.5 60
+OCO 30 90; delayAtPercentLoss 0.5 60
+OCO 30 60; delayAtPercentLoss 0.5 60
+OCO 25 75; delayAtPercentLoss 0.5 60
+OCO 25 50; delayAtPercentLoss 0.5 60
+OCO 20 60; delayAtPercentLoss 0.5 60
+OCO 20 40; delayAtPercentLoss 0.5 60
+OCO 15 45; delayAtPercentLoss 0.5 60
+OCO 15 30; delayAtPercentLoss 0.5 60
+OCO 10 30; delayAtPercentLoss 0.5 60
+OCO 10 20; delayAtPercentLoss 0.5 60
+OCO 50 100; delayAtPercentLoss 0.2 120
+OCO 30 90; delayAtPercentLoss 0.2 120
+OCO 30 60; delayAtPercentLoss 0.2 120
+OCO 25 75; delayAtPercentLoss 0.2 120
+OCO 25 50; delayAtPercentLoss 0.2 120
+OCO 20 60; delayAtPercentLoss 0.2 120
+OCO 20 40; delayAtPercentLoss 0.2 120
+OCO 15 45; delayAtPercentLoss 0.2 120
+OCO 15 30; delayAtPercentLoss 0.2 120
+OCO 10 30; delayAtPercentLoss 0.2 120
+OCO 10 20; delayAtPercentLoss 0.2 120
+OCO 50 100; delayAtPercentLoss 0.5 120
+OCO 30 90; delayAtPercentLoss 0.5 120
+OCO 30 60; delayAtPercentLoss 0.5 120
+OCO 25 75; delayAtPercentLoss 0.5 120
+OCO 25 50; delayAtPercentLoss 0.5 120
+OCO 20 60; delayAtPercentLoss 0.5 120
+OCO 20 40; delayAtPercentLoss 0.5 120
+OCO 15 45; delayAtPercentLoss 0.5 120
+OCO 15 30; delayAtPercentLoss 0.5 120
+OCO 10 30; delayAtPercentLoss 0.5 120
+OCO 10 20; delayAtPercentLoss 0.5 120
+OCO 50 100; delayAtPercentLoss 1.0 120
+OCO 30 90; delayAtPercentLoss 1.0 120
+OCO 30 60; delayAtPercentLoss 1.0 120
+OCO 25 75; delayAtPercentLoss 1.0 120
+OCO 25 50; delayAtPercentLoss 1.0 120
+OCO 20 60; delayAtPercentLoss 1.0 120
+OCO 20 40; delayAtPercentLoss 1.0 120
+OCO 15 45; delayAtPercentLoss 1.0 120
+OCO 15 30; delayAtPercentLoss 1.0 120
+OCO 10 30; delayAtPercentLoss 1.0 120
+OCO 10 20; delayAtPercentLoss 1.0 120
