changed strategy set

--- a/input.config
+++ b/input.config
@@ -2,13 +2,20 @@ F:
 cd AutomatedTrading
 python main.py
 stream add AAPL AMD ARKK BA ETSY FAS FNGU GUSH JNUG LABU MARA NAIL SOXL SPXL TNA TQQQ UCO UVXY VDE
-add TQQQ 20 renko_sa 4       
+add TQQQ 15 bbmr_mas 35  
 add FNGU 15 renko_smi 3 5
 add UCO 15 renko_wcsmi_vs 25 2
 add SPXL 20 renko_wcsmi_vs 35 2
 add GUSH 20 renko_bah
+add SOXL 10 bbr_v32w
+add VDE 15 bbmr_mas 30
 start
 opt TQQQ stopAtPercentLoss 1
+opt TQQQ TSFHP 0.6
 opt SOXL stopAtPercentLoss 1
 opt FNGU stopAtPercentLoss 2
+opt FNGU OCO 30 60
+opt SOXL TSFH 30
+opt SPXL OCO 50 100
+opt VDE OCO 30 60
 status
