configs for strategy and option

--- a/Backtesting/config/optionsToTest.config
+++ b/Backtesting/config/optionsToTest.config
@@ -2,6 +2,9 @@ None
 stopAtPercentLoss 1
 stopAtPercentLoss 1.5
 stopAtPercentLoss 2
+stopAtPercentLossSum 1
+stopAtPercentLossSum 1.5
+stopAtPercentLossSum 2
 delayAtPercentLoss 0.2 60
 delayAtPercentLoss 0.5 60
 delayAtPercentLoss 0.2 120
@@ -43,6 +46,33 @@ TSFH 35; stopAtPercentLoss 2
 TSFH 40; stopAtPercentLoss 2
 TSFH 45; stopAtPercentLoss 2
 TSFH 50; stopAtPercentLoss 2
+TSFH 10; stopAtPercentLossSum 1
+TSFH 15; stopAtPercentLossSum 1
+TSFH 20; stopAtPercentLossSum 1
+TSFH 25; stopAtPercentLossSum 1
+TSFH 30; stopAtPercentLossSum 1
+TSFH 35; stopAtPercentLossSum 1
+TSFH 40; stopAtPercentLossSum 1
+TSFH 45; stopAtPercentLossSum 1
+TSFH 50; stopAtPercentLossSum 1
+TSFH 10; stopAtPercentLossSum 1.5
+TSFH 15; stopAtPercentLossSum 1.5
+TSFH 20; stopAtPercentLossSum 1.5
+TSFH 25; stopAtPercentLossSum 1.5
+TSFH 30; stopAtPercentLossSum 1.5
+TSFH 35; stopAtPercentLossSum 1.5
+TSFH 40; stopAtPercentLossSum 1.5
+TSFH 45; stopAtPercentLossSum 1.5
+TSFH 50; stopAtPercentLossSum 1.5
+TSFH 10; stopAtPercentLossSum 2
+TSFH 15; stopAtPercentLossSum 2
+TSFH 20; stopAtPercentLossSum 2
+TSFH 25; stopAtPercentLossSum 2
+TSFH 30; stopAtPercentLossSum 2
+TSFH 35; stopAtPercentLossSum 2
+TSFH 40; stopAtPercentLossSum 2
+TSFH 45; stopAtPercentLossSum 2
+TSFH 50; stopAtPercentLossSum 2
 TSFH 10; delayAtPercentLoss 0.2 60
 TSFH 15; delayAtPercentLoss 0.2 60
 TSFH 20; delayAtPercentLoss 0.2 60
@@ -124,6 +154,33 @@ TSFHP 0.60; stopAtPercentLoss 2
 TSFHP 0.75; stopAtPercentLoss 2
 TSFHP 0.90; stopAtPercentLoss 2
 TSFHP 1.00; stopAtPercentLoss 2
+TSFHP 0.10; stopAtPercentLossSum 1
+TSFHP 0.20; stopAtPercentLossSum 1
+TSFHP 0.30; stopAtPercentLossSum 1
+TSFHP 0.40; stopAtPercentLossSum 1
+TSFHP 0.50; stopAtPercentLossSum 1
+TSFHP 0.60; stopAtPercentLossSum 1
+TSFHP 0.75; stopAtPercentLossSum 1
+TSFHP 0.90; stopAtPercentLossSum 1
+TSFHP 1.00; stopAtPercentLossSum 1
+TSFHP 0.10; stopAtPercentLossSum 1.5
+TSFHP 0.20; stopAtPercentLossSum 1.5
+TSFHP 0.30; stopAtPercentLossSum 1.5
+TSFHP 0.40; stopAtPercentLossSum 1.5
+TSFHP 0.50; stopAtPercentLossSum 1.5
+TSFHP 0.60; stopAtPercentLossSum 1.5
+TSFHP 0.75; stopAtPercentLossSum 1.5
+TSFHP 0.90; stopAtPercentLossSum 1.5
+TSFHP 1.00; stopAtPercentLossSum 1.5
+TSFHP 0.10; stopAtPercentLossSum 2
+TSFHP 0.20; stopAtPercentLossSum 2
+TSFHP 0.30; stopAtPercentLossSum 2
+TSFHP 0.40; stopAtPercentLossSum 2
+TSFHP 0.50; stopAtPercentLossSum 2
+TSFHP 0.60; stopAtPercentLossSum 2
+TSFHP 0.75; stopAtPercentLossSum 2
+TSFHP 0.90; stopAtPercentLossSum 2
+TSFHP 1.00; stopAtPercentLossSum 2
 TSFHP 0.10; delayAtPercentLoss 0.2 60
 TSFHP 0.20; delayAtPercentLoss 0.2 60
 TSFHP 0.30; delayAtPercentLoss 0.2 60
@@ -213,6 +270,39 @@ OCO 15 45; stopAtPercentLoss 2
 OCO 15 30; stopAtPercentLoss 2
 OCO 10 30; stopAtPercentLoss 2
 OCO 10 20; stopAtPercentLoss 2
+OCO 50 100; stopAtPercentLossSum 1 
+OCO 30 90; stopAtPercentLossSum 1
+OCO 30 60; stopAtPercentLossSum 1
+OCO 25 75; stopAtPercentLossSum 1
+OCO 25 50; stopAtPercentLossSum 1
+OCO 20 60; stopAtPercentLossSum 1
+OCO 20 40; stopAtPercentLossSum 1
+OCO 15 45; stopAtPercentLossSum 1
+OCO 15 30; stopAtPercentLossSum 1
+OCO 10 30; stopAtPercentLossSum 1 
+OCO 10 20; stopAtPercentLossSum 1
+OCO 50 100; stopAtPercentLossSum 1.5
+OCO 30 90; stopAtPercentLossSum 1.5
+OCO 30 60; stopAtPercentLossSum 1.5
+OCO 25 75; stopAtPercentLossSum 1.5
+OCO 25 50; stopAtPercentLossSum 1.5
+OCO 20 60; stopAtPercentLossSum 1.5
+OCO 20 40; stopAtPercentLossSum 1.5
+OCO 15 45; stopAtPercentLossSum 1.5
+OCO 15 30; stopAtPercentLossSum 1.5
+OCO 10 30; stopAtPercentLossSum 1.5
+OCO 10 20; stopAtPercentLossSum 1.5
+OCO 50 100; stopAtPercentLossSum 2
+OCO 30 90; stopAtPercentLossSum 2
+OCO 30 60; stopAtPercentLossSum 2
+OCO 25 75; stopAtPercentLossSum 2
+OCO 25 50; stopAtPercentLossSum 2
+OCO 20 60; stopAtPercentLossSum 2
+OCO 20 40; stopAtPercentLossSum 2
+OCO 15 45; stopAtPercentLossSum 2
+OCO 15 30; stopAtPercentLossSum 2
+OCO 10 30; stopAtPercentLossSum 2
+OCO 10 20; stopAtPercentLossSum 2
 OCO 50 100; delayAtPercentLoss 0.2 60
 OCO 30 90; delayAtPercentLoss 0.2 60
 OCO 30 60; delayAtPercentLoss 0.2 60
